<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fr.neatmonster</groupId>
        <artifactId>nocheatplus-parent</artifactId>
        <version>1.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>nocheatplus</artifactId>
    <version>3.17.1-SNAPSHOT</version>

    <name>NoCheatPlus</name>
    <description>Detect and fight the exploitation of various flaws/bugs in Minecraft.</description>
    <url>https://ci.codemc.io/job/Updated-NoCheatPlus/job/Updated-NoCheatPlus/</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy_MM_dd-HH_mm</maven.build.timestamp.format>
        <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
        <BUILD_NUMBER>?</BUILD_NUMBER>
        <BUILD_SERIES>?</BUILD_SERIES>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>fr.neatmonster</groupId>
            <artifactId>ncpcore</artifactId>
            <version>1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>fr.neatmonster</groupId>
            <artifactId>ncpcompatbukkit</artifactId>
            <version>1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>fr.neatmonster</groupId>
            <artifactId>ncpcompatprotocollib</artifactId>
            <version>1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockbukkit.mockbukkit</groupId>
            <artifactId>mockbukkit-v1.21</artifactId>
            <version>4.57.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- Build Description Profiles -->
    <profiles>
        <profile>
            <id>timestamp</id>
            <activation>
                <property>
                    <name>!env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <buildDescription>${maven.build.timestamp}</buildDescription>
            </properties>
        </profile>
        <profile>
            <id>dynamic_build_number</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <buildDescription>b${env.BUILD_NUMBER}</buildDescription>
            </properties>
        </profile>
    </profiles>

    <!-- Building -->
    <build>
        <defaultGoal>clean package</defaultGoal>
        <directory>../target</directory> <!-- Build it one level up, because it is the one we care about -->
        <finalName>NoCheatPlus</finalName>
        <resources>
            <!-- plugin.yml here to fill in the correct content. -->
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>plugin.yml</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <filters>
                        <filter>
                            <!-- Avoid to include META-INF/maven in Jar -->
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>


</project>
